--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 			"import/prefer-default-export": "off",
 			"no-unused-vars": "off",
 			"import/no-unresolved": "off",
+			"no-param-reassign": "off",
+			"default-param-last": "off",
 			"no-unused-expressions": "off",
 			"import/extensions": "off",
 			"no-nested-ternary": "off"
@@ -39,12 +41,18 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^12.1.4",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.27.2",
 		"cross-env": "^7.0.3",
+		"immer": "^9.0.14",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.30.0",
+		"react-redux": "^8.0.1",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.0",
+		"redux": "^4.2.0",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-saga": "^1.1.3",
 		"styled-components": "^5.3.5",
 		"styled-reset": "^4.3.4",
 		"web-vitals": "^2.1.4"
