--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
 		"cross-env": "^7.0.3",
 		"immer": "^9.0.14",
 		"react": "^17.0.2",
+		"react-cookie": "^4.1.1",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.30.0",
 		"react-redux": "^8.0.1",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.0",
+		"react-toastify": "^9.0.3",
 		"redux": "^4.2.0",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-saga": "^1.1.3",
