--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"prepare": "husky install"
 	},
 	"lint-staged": {
-		"*.{js,jsx}": [
+		"**/*.{js,jsx}": [
 			"eslint --fix",
 			"prettier --write",
 			"git add"
