--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
 	},
 	"rules": {
 		"react/react-in-jsx-scope": "off",
+		"no-useless-escape": "off",
 		"react/prop-types": "off",
 		"no-unused-vars": "off",
 		"no-undef": "off"
