--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
 	},
 	"extends": [
 		"plugin:react/recommended",
+		"plugin:import/recommended",
 		"plugin:react-hooks/recommended",
 		"plugin:prettier/recommended",
 		"eslint:recommended"
@@ -19,6 +20,7 @@
 	},
 	"rules": {
 		"react/react-in-jsx-scope": "off",
+		"import/no-unresolved": "off",
 		"no-useless-escape": "off",
 		"react/prop-types": "off",
 		"no-unused-vars": "off",
