--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react": "^18.0.0",
 		"react-cookie": "^4.1.1",
 		"react-dom": "^18.0.0",
+		"react-js-pagination": "^3.0.3",
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.0.3",
