--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-toastify": "^9.0.3",
+		"recoil": "^0.7.3",
 		"redux": "^4.2.0",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-saga": "^1.1.3",
@@ -47,6 +48,7 @@
 		"lint-staged": "^13.0.0",
 		"prettier": "^2.6.2",
 		"vite": "^2.9.9",
+		"vite-plugin-svg": "^0.7.0",
 		"vite-plugin-svgr": "^2.1.0"
 	}
 }
