--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"axios": "^0.27.2",
+		"dayjs": "^1.11.3",
 		"immer": "^9.0.14",
 		"react": "^18.0.0",
 		"react-cookie": "^4.1.1",
